--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,16 @@
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-simple</artifactId>
          <version>1.7.30</version>
-         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.slf4j</groupId>
+         <artifactId>slf4j-api</artifactId>
+         <version>1.7.30</version>
+      </dependency>
+      <dependency>
+         <groupId>org.slf4j</groupId>
+         <artifactId>slf4j-simple</artifactId>
+         <version>1.7.30</version>
       </dependency>
 
       <!-- Common deps for all qqq modules -->
@@ -69,12 +78,12 @@
       <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-api</artifactId>
-         <version>2.14.1</version>
+         <version>2.15.0</version>
       </dependency>
       <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-core</artifactId>
-         <version>2.14.1</version>
+         <version>2.15.0</version>
       </dependency>
       <dependency>
          <groupId>org.junit.jupiter</groupId>
