--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
    <modelVersion>4.0.0</modelVersion>
 
    <groupId>com.kingsrook.qqq</groupId>
-   <artifactId>qqq-sample-deployment</artifactId>
+   <artifactId>qqq-sample-project</artifactId>
    <version>0.0-SNAPSHOT</version>
 
    <properties>
@@ -64,12 +64,12 @@
       <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-api</artifactId>
-         <version>2.14.1</version>
+         <version>2.15.0</version>
       </dependency>
       <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-core</artifactId>
-         <version>2.14.1</version>
+         <version>2.15.0</version>
       </dependency>
       <dependency>
          <groupId>org.junit.jupiter</groupId>
